--- a/monte_carlo_tree_search/requirements.txt
+++ b/monte_carlo_tree_search/requirements.txt
@@ -7,20 +7,17 @@ astor=0.8.1=py37_0
 blas=1.0=mkl
 c-ares=1.16.1=haf1e3a3_0
 ca-certificates=2020.10.14=0
-cairo=1.14.12=he60d9cb_2
-certifi=2020.11.8=py37hecd8cb5_0
+certifi=2020.12.5=py37hecd8cb5_0
+cycler=0.10.0=py37_0
 expat=2.2.9=hb1e8313_2
-fontconfig=2.12.6=h9850fc5_0
-freetype=2.8=h12048fb_1
+freetype=2.10.4=ha233b18_0
 fribidi=1.0.10=haf1e3a3_0
 gast=0.4.0=py_0
 gettext=0.19.8.1=hb0f4f8b_2
 glib=2.65.0=hc5f4afa_0
 graphite2=1.3.14=h38d11af_0
-graphviz=2.40.1=h0a44026_0
 grpcio=1.31.0=py37h7580e61_0
 h5py=2.10.0=py37h0601b69_1
-harfbuzz=1.7.6=h171471c_1
 hdf5=1.10.6=hdbbcd12_0
 icu=58.2=h0a44026_3
 importlib-metadata=1.7.0=py37_0
@@ -30,6 +27,8 @@ keras=2.3.1=0
 keras-applications=1.0.8=py_1
 keras-base=2.3.1=py37_0
 keras-preprocessing=1.1.0=py_1
+kiwisolver=1.3.0=py37h23ab428_0
+lcms2=2.11=h92f6f08_0
 libcxx=10.0.0=1
 libedit=3.1.20191231=h1de35cc_1
 libffi=3.3=hb1e8313_2
@@ -41,6 +40,8 @@ libtiff=4.1.0=hcb84e12_1
 libxml2=2.9.10=h3b9e6c8_1
 lz4-c=1.9.2=hb1e8313_1
 markdown=3.2.2=py37_0
+matplotlib=3.3.2=0
+matplotlib-base=3.3.2=py37h181983e_0
 mkl=2019.4=233
 mkl-service=2.3.0=py37hfbe908c_0
 mkl_fft=1.2.0=py37hc64f4ea_0
@@ -48,14 +49,15 @@ mkl_random=1.1.1=py37h959d312_0
 ncurses=6.2=h0a44026_1
 numpy=1.19.1=py37h3b9f5b6_0
 numpy-base=1.19.1=py37hcfb5961_0
+olefile=0.46=py37_0
 openssl=1.1.1h=haf1e3a3_0
 pandas=1.1.3=py37hb1e8313_0
-pango=1.42.0=h0f8274a_0
 pcre=8.44=hb1e8313_0
+pillow=8.0.1=py37h5270095_0
 pip=20.2.2=py37_0
 pixman=0.40.0=haf1e3a3_0
 protobuf=3.13.0=py37hb1e8313_1
-pydot=1.4.1=py37_0
+pydot=1.2.4=py_0
 pyparsing=2.4.7=py_0
 python=3.7.9=h26836e1_0
 python-dateutil=2.8.1=py_0
@@ -72,6 +74,7 @@ tensorflow-base=1.14.0=mkl_py37h5a24fda_0
 tensorflow-estimator=1.14.0=py_0
 termcolor=1.1.0=py37_1
 tk=8.6.10=hb0a8c7a_0
+tornado=6.1=py37h9ed2024_0
 tqdm=4.49.0=py_0
 werkzeug=1.0.1=py_0
 wheel=0.35.1=py_0
